--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.3",
@@ -21,6 +22,8 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.1.0",
+    "graphql": "^16.11.0",
+    "nodemon": "^3.1.10",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
